--- a/custom_components/proxmox_pve/services.yaml
+++ b/custom_components/proxmox_pve/services.yaml
@@ -1,99 +1,111 @@
 start:
   name: Start guest
   description: Start a VM or container.
+  target:
+    device:
+      integration: proxmox_pve
   fields:
-    device_id:
-      name: Device
-      description: Select the VM/CT device (recommended, works with multi-host).
-      example: "a1b2c3d4e5f6..."
     config_entry_id:
       name: Config entry id
       description: Optional. Force a specific Proxmox host configuration entry.
+      example: "8d9f2e7b1c3d4a5f..."
     host:
       name: Host
-      description: Optional. Proxmox host/IP of the configured entry (only used when device_id is not provided).
+      description: Optional. Proxmox host/IP of the configured entry (only used when device is not selected).
       example: "192.168.178.101"
     node:
       name: Node
-      description: Proxmox node name (only used when device_id is not provided).
+      description: Proxmox node name (only used when device is not selected).
       example: "pve1"
     vmid:
       name: VMID
-      description: Guest VMID (only used when device_id is not provided).
+      description: Guest VMID (only used when device is not selected).
       example: 100
     type:
       name: Type
-      description: Guest type.
+      description: Guest type (only used when device is not selected).
       example: "qemu"
 
 shutdown:
   name: Shutdown guest
-  description: Soft shutdown a VM or container.
+  description: Gracefully shutdown a VM or container.
+  target:
+    device:
+      integration: proxmox_pve
   fields:
-    device_id:
-      name: Device
-      description: Select the VM/CT device (recommended, works with multi-host).
     config_entry_id:
       name: Config entry id
       description: Optional. Force a specific Proxmox host configuration entry.
+      example: "8d9f2e7b1c3d4a5f..."
     host:
       name: Host
-      description: Optional. Proxmox host/IP of the configured entry (only used when device_id is not provided).
+      description: Optional. Proxmox host/IP of the configured entry (only used when device is not selected).
+      example: "192.168.178.101"
     node:
       name: Node
-      description: Proxmox node name (only used when device_id is not provided).
+      description: Proxmox node name (only used when device is not selected).
+      example: "pve1"
     vmid:
       name: VMID
-      description: Guest VMID (only used when device_id is not provided).
+      description: Guest VMID (only used when device is not selected).
+      example: 100
     type:
       name: Type
-      description: Guest type.
+      description: Guest type (only used when device is not selected).
       example: "qemu"
 
 stop_hard:
   name: Stop guest (hard)
   description: Hard stop a VM or container (equivalent to Stop).
+  target:
+    device:
+      integration: proxmox_pve
   fields:
-    device_id:
-      name: Device
-      description: Select the VM/CT device (recommended, works with multi-host).
     config_entry_id:
       name: Config entry id
       description: Optional. Force a specific Proxmox host configuration entry.
+      example: "8d9f2e7b1c3d4a5f..."
     host:
       name: Host
-      description: Optional. Proxmox host/IP of the configured entry (only used when device_id is not provided).
+      description: Optional. Proxmox host/IP of the configured entry (only used when device is not selected).
+      example: "192.168.178.101"
     node:
       name: Node
-      description: Proxmox node name (only used when device_id is not provided).
+      description: Proxmox node name (only used when device is not selected).
+      example: "pve1"
     vmid:
       name: VMID
-      description: Guest VMID (only used when device_id is not provided).
+      description: Guest VMID (only used when device is not selected).
+      example: 100
     type:
       name: Type
-      description: Guest type.
+      description: Guest type (only used when device is not selected).
       example: "qemu"
 
 reboot:
   name: Reboot guest
   description: Reboot a VM or container.
+  target:
+    device:
+      integration: proxmox_pve
   fields:
-    device_id:
-      name: Device
-      description: Select the VM/CT device (recommended, works with multi-host).
     config_entry_id:
       name: Config entry id
       description: Optional. Force a specific Proxmox host configuration entry.
+      example: "8d9f2e7b1c3d4a5f..."
     host:
       name: Host
-      description: Optional. Proxmox host/IP of the configured entry (only used when device_id is not provided).
+      description: Optional. Proxmox host/IP of the configured entry (only used when device is not selected).
+      example: "192.168.178.101"
     node:
       name: Node
-      description: Proxmox node name (only used when device_id is not provided).
+      description: Proxmox node name (only used when device is not selected).
+      example: "pve1"
     vmid:
       name: VMID
-      description: Guest VMID (only used when device_id is not provided).
+      description: Guest VMID (only used when device is not selected).
+      example: 100
     type:
       name: Type
-      description: Guest type.
+      description: Guest type (only used when device is not selected).
       example: "qemu"
