--- a/custom_components/proxmox_pve/manifest.json
+++ b/custom_components/proxmox_pve/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "proxmox_pve",
   "name": "Easy Proxmox (by René Bachmann)",
-  "version": "0.7.1",
-  "documentation": "https://example.invalid",
+  "version": "0.7.3",
+  "documentation": "https://github.com/bahmcloud/easy_proxmox ",
   "requirements": ["aiohttp>=3.9.0"],
   "codeowners": ["@BAHMCLOUD"],
   "config_flow": true,
